# clothes-outfit

./: .gitmodules  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt  scrapy.py  test.py
backend/app/: app.py  main.py  scrapy.py
backend/app/conf/: OutfitRule.py  config.py
backend/app/frontend/: __init__.py  api.py  fetch.py  filter.py
backend/app/models/: BaseModel.py  __init__.py  clothes.py  popularity.py
backend/app/notification/: __init__.py
backend/app/scrapy/: BEAMSExtract.py  BEAMSExtractBase.py  BEAMSExtractWithHashTag.py  BEAMSLoader.py  BEAMSLoaderWithHashTag.py  BEAMSTransform.py  BEAMSTransformWithHashTag.py  CSVExtractManagement.py  CSVExtractManager.py  ExtractManagement.py  ExtractManager.py  LoaderManager.py  PipelineManager.py  SQLExtractMangement.py  SQLExtractManger.py  TransformManager.py  __init__.py
backend/app/utils/: __init__.py  clothes.py  code.py  process.py  redis_utils.py  timer.py
cache/: Dockerfile
data_analysis/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
data_analysis/app/: clothes_app.py  conf.py  db_conn.py
database/: Dockerfile
database/schema/: init.sql
frontend/: Dockerfile  readme.md
frontend/app/: package-lock.json  package.json
frontend/app/src/: Frame.module.css  MyComponent.js
frontend_old/app/src/: App.js  MyComponent.js
