[tool.poetry]
name = "closet"
version = "0.1.0"
description = ""
authors = ["a920604a <a920604a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.2"
selenium = "^4.21.0"
mysql-connector-python = "^8.4.0"
pydantic = "^2.7.3"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
webdriver-manager = "^4.0.1"
objprint = "^0.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
